[gd_scene load_steps=13 format=2]

[ext_resource path="res://Prefabs/Animations/Lakito.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/AI/Lakito.gd" type="Script" id=2]
[ext_resource path="res://Scripts/General/Generic/AliveObject.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Main/stomp.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Main/kick.wav" type="AudioStream" id=5]
[ext_resource path="res://Prefabs/Blocks/IceBlock.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Sounds/Enemies/lakitu1.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/Enemies/lakitu3.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/Enemies/lakitu2.wav" type="AudioStream" id=9]
[ext_resource path="res://Objects/Enemies/SpinyEgg.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 32 )

[node name="Lakito" type="KinematicBody2D" groups=["Enemy"]]
z_index = 20
script = ExtResource( 3 )
vars = {
"bounce": 9.0,
"internal_result": null,
"lakitu_addon": null,
"px_before_leaving": 1000,
"speed": 0.0,
"throw_delay": 200.0,
"throw_script": ExtResource( 10 )
}
AI = ExtResource( 2 )
can_freeze = true
sound_pth = NodePath("Stomp")
alt_sound_pth = NodePath("Kick")
animated_sprite_pth = NodePath("AnimatedSprite")
frozen_sprite_pth = NodePath("IceSprite")

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
playing = true
offset = Vector2( 0, -24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 0, -24 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 0, -24 )
shape = SubResource( 2 )
disabled = true

[node name="Kick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Sounds"

[node name="Stomp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Sounds"

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2( -2.38419e-07, -24 )
scale = Vector2( 1.6, 2.4 )

[node name="IceSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -24 )
frames = ExtResource( 6 )
animation = "medium"

[node name="Throw1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "Sounds"

[node name="Throw2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
bus = "Sounds"

[node name="Throw3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "Sounds"
